--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "expo-clipboard": "~7.1.5",
-    "expo-device": "~7.1.4"
+    "expo-device": "~7.1.4",
+    "expo-build-properties": "~0.14.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
