--- a/package.json
+++ b/package.json
@@ -4,23 +4,38 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "start:check": "npm run type-check && expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
+    "android:check": "npm run type-check && expo start --android",
     "ios": "expo start --ios",
+    "ios:check": "npm run type-check && expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "web:check": "npm run type-check && expo start --web",
+    "lint": "expo lint",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "tsc --noEmit --watch",
+    "type-check:errors-only": "tsc --noEmit --listFilesOnly false",
+    "fix-types": "node ./scripts/fix-typescript.js",
+    "prebuild": "npm run type-check",
+    "build": "expo build",
+    "build:check": "npm run type-check && expo build"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-firebase/app": "^23.1.0",
+    "@react-native-firebase/app": "^23.1.1",
+    "@react-native-firebase/firestore": "^23.1.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@supabase/supabase-js": "^2.55.0",
     "expo": "~53.0.22",
     "expo-blur": "~14.1.5",
+    "expo-build-properties": "~0.14.8",
+    "expo-clipboard": "~7.1.5",
     "expo-constants": "~17.1.7",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
@@ -40,14 +55,13 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-clipboard": "~7.1.5",
-    "expo-device": "~7.1.4",
-    "expo-build-properties": "~0.14.8"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
