--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,66 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
+# --- dependencies
 node_modules/
 
-# Expo
+# --- Expo
 .expo/
+.expo-shared/
 dist/
 web-build/
 expo-env.d.ts
 
-# Native
-.kotlin/
-*.orig.*
+# --- Android (build & local config)
+android/.gradle/
+android/.cxx/
+android/app/build/
+android/app/release/
+android/local.properties
 *.jks
+*.keystore
+
+# --- iOS (build & user data)
+ios/build/
+ios/DerivedData/
+ios/**/xcuserdata/
+*.mobileprovision
+
+# --- Secrets（最重要）
+.env
+.env.*
+!.env.example
+.npmrc
+.netrc
+keystore.properties
+serviceAccount*.json
+google-credentials*.json
+AuthKey_*.p8
 *.p8
 *.p12
 *.key
-*.mobileprovision
+*.pem
+*.der
+*.crt
+*.cer
+*.csr
 
-# Metro
+# --- Metro
 .metro-health-check*
 
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
+# --- Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+firebase-debug.log
 
-# macOS
+# --- OS/IDE
 .DS_Store
-*.pem
+.vscode/
+.idea/
+.history/
 
-# local env files
-.env*.local
-
-# typescript
+# --- TypeScript
 *.tsbuildinfo
 
+# --- Others (你原有的保留)
+.kotlin/
+*.orig.*
 app-example
-
-.vscode/
-.history/
